--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -62,9 +62,8 @@ http {
 
   <% unless File.exists?(File.join(ENV["APP_ROOT"], "nginx/conf/.enable_dotfiles")) %>
     location ~ /\. {
-      try_files '' /index.html;
-      <% deny all; %>
-      <% return 404; %>
+      deny all;
+      return 404;
     }
   <% end %>
   }
