--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -62,8 +62,7 @@ http {
 
   <% unless File.exists?(File.join(ENV["APP_ROOT"], "nginx/conf/.enable_dotfiles")) %>
     location ~ /\. {
-      deny all;
-      return 404;
+      try_files '' /index.html;
     }
   <% end %>
   }
