--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -34,6 +34,7 @@ http {
 
     location / {
       root <%= ENV["APP_ROOT"] %>/public;
+      try_files $uri /index.html;
       <% if File.exists?(File.join(ENV["APP_ROOT"], "nginx/conf/.enable_pushstate")) %>
       if (!-e $request_filename) {
         rewrite ^(.*)$ / break;
@@ -62,7 +63,8 @@ http {
 
   <% unless File.exists?(File.join(ENV["APP_ROOT"], "nginx/conf/.enable_dotfiles")) %>
     location ~ /\. {
-      try_files '' /index.html;
+      deny all;
+      return 404;
     }
   <% end %>
   }
